--- a/requirements.txt
+++ b/requirements.txt
@@ -8,10 +8,12 @@ backports.zoneinfo==0.2.1
 billiard==3.6.4.0
 black==22.10.0
 celery==5.2.7
+cffi==1.15.1
 click==8.1.3
 click-didyoumean==0.3.0
 click-plugins==1.1.1
 click-repl==0.2.0
+cryptography==38.0.1
 decorator==5.1.1
 Deprecated==1.2.13
 Django==4.1.2
@@ -22,6 +24,7 @@ django-extensions==3.2.1
 django-redis==5.2.0
 django-timezone-field==5.0
 djangorestframework==3.14.0
+drf-jwt==1.19.2
 executing==1.1.1
 flake8==5.0.4
 Flask==2.2.2
@@ -47,9 +50,11 @@ psycopg2-binary==2.8.6
 ptyprocess==0.7.0
 pure-eval==0.2.2
 pycodestyle==2.9.1
+pycparser==2.21
 pyee==9.0.4
 pyflakes==2.5.0
 Pygments==2.13.0
+PyJWT==1.7.1
 pyparsing==3.0.9
 python-crontab==2.6.0
 python-dateutil==2.8.2
