--- a/requirements.txt
+++ b/requirements.txt
@@ -20,6 +20,7 @@ Django==4.1.2
 django-celery-beat==2.4.0
 django-celery-results==2.4.0
 django-cors-headers==3.13.0
+django-debug-toolbar==3.7.0
 django-extensions==3.2.1
 django-redis==5.2.0
 django-timezone-field==5.0
