--- a/requirements.txt
+++ b/requirements.txt
@@ -23,6 +23,7 @@ django-cors-headers==3.13.0
 django-debug-toolbar==3.7.0
 django-extensions==3.2.1
 django-redis==5.2.0
+django-rest-auth==0.9.5
 django-timezone-field==5.0
 djangorestframework==3.14.0
 drf-jwt==1.19.2
